tests/ui/async-await/async-closures/return-type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/return-type-mismatch.rs:9:24
   |
LL |         let y: usize = x().await;
   |                        ^^^^^^^^^ expected `usize`, found `i32`
   |
help: you can convert an `i32` to a `usize` and panic if the converted value doesn't fit
   |
LL |         let y: usize = x().await.try_into().unwrap();
   |                                 ++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
